# Cipher

./: CMakeLists.txt  README.md
Files/: link.txt  originalText.txt  out.txt
Headers/: caesar.h  enum.h  error.h  files.h  global.h  main.h  playfair.h  self-cipher.h  self-encryption.h  structures.h  substitution.h  utilCipher.h  utilEnum.h  utilString.h  vigenere.h
Sources/: caeser.c  error.c  files.c  main.c  playfair.c  self-cipher.c  self-encryption.cpp  substitution.c  utilCipher.c  utilEnum.c  utilString.c  vigenere.c
